--- a/utils/markdown.css
+++ b/utils/markdown.css
@@ -1,6 +1,14 @@
 body {
 	font-family: 'Inter', sans-serif;
 }
+
+ul, ol {
+  margin-left: 1.5em;
+}
+li {
+  margin-bottom: 0.3em;
+}
+
 /* Custom styles for the rendered content */
 .markdown-content {
 	line-height: 1.6;
@@ -31,4 +39,5 @@ body {
 	color: #6a737d;
 	padding-left: 1em;
 	margin: 1em 0;
+
 }
